Fix configs for MCP

--- a/en/tools/config-catalog-generator/data/configs.json
+++ b/en/tools/config-catalog-generator/data/configs.json
@@ -1188,7 +1188,7 @@
                     ]
                 }
             ],
-            "exampleFile": "apim.ai.toml"
+            "exampleFile": "apim.mcp.toml"
         },
         {
             "title": "API-M OAuth configurations",
