Document preserveCredentials parameter in REST API and --preserve-credentials flag in APICTL

--- a/en/docs/reference/product-apis/publisher-apis/publisher-v2/publisher-v2.yaml
+++ b/en/docs/reference/product-apis/publisher-apis/publisher-v2/publisher-v2.yaml
@@ -4229,6 +4229,13 @@ paths:
           schema:
             type: boolean
             default: false
+        - name: preserveCredentials
+          in: query
+          description: |
+            Preserve endpoint configuration credentials
+          required: false
+          schema:
+            type: boolean
       responses:
         200:
           description: |
