--- a/en/tools/config-catalog-generator/data/configs.json
+++ b/en/tools/config-catalog-generator/data/configs.json
@@ -864,97 +864,72 @@
             "exampleFile": "cache.tags.toml"
         },
         {
-            "title": "API-M Analytics configurations",
-            "options": [
+          "title": "API Manager Analytics Configuration",
+          "options": [
+            {
+              "name": "apim.analytics",
+              "required": true,
+              "description": "Top-level Analytics configuration.",
+              "params": [
                 {
-                    "name": "apim.analytics",
-                    "required": true,
-                    "description": "",
-                    "params": [
-                        {
-                            "name": "enable",
-                            "type": "string",
-                            "required": true,
-                            "default": "FALSE",
-                            "possible": "",
-                            "description": "Set TRUE to enable analytics in API Manager"
-                        },
-                        {
-                            "name": "store_api_url",
-                            "type": "string",
-                            "required": true,
-                            "default": "https://localhost:7444",
-                            "possible": "",
-                            "description": "The Store REST API URL for Analytics. If there are mutiple analytics node, use the loadbalancing URL"
-                        },
-                        {
-                            "name": "username",
-                            "type": "string",
-                            "required": true,
-                            "default": "Credentials of the super admin user.",
-                            "possible": "",
-                            "description": "Credentials of the super admin user, in the analytics node"
-                        },
-                        {
-                            "name": "password",
-                            "type": "string",
-                            "required": true,
-                            "default": "Credentials of the super admin user.",
-                            "possible": "",
-                            "description": "Credentials of the super admin user, in the analytics node"
-                        },
-                        {
-                            "name": "receiver_username",
-                            "type": "string",
-                            "required": false,
-                            "default": "Uses the \"apim.analytics.username\"",
-                            "possible": "",
-                            "description": "Change this if a specific user is required for event publishing."
-                        },
-                        {
-                            "name": "receiver_password",
-                            "type": "string",
-                            "required": false,
-                            "default": "Uses the \"apim.analytics.password\"",
-                            "possible": "",
-                            "description": "Change this if a specific user is required for event publishing."
-                        },
-                        {
-                            "name": "store_api_username",
-                            "type": "string",
-                            "required": false,
-                            "default": "use apim.analytics.username",
-                            "possible": "",
-                            "description": "Change this if a specific user is required to access the Store REST API."
-                        },
-                        {
-                            "name": "store_api_password",
-                            "type": "string",
-                            "required": false,
-                            "default": "use apim.analytics.password",
-                            "possible": "",
-                            "description": "Change this if a specific user is required to access the Store REST API."
-                        },
-                        {
-                            "name": "event_publisher_impl",
-                            "type": "string",
-                            "required": false,
-                            "default": "",
-                            "possible": "",
-                            "description": "If you have defined a custom \"event_publisher_type\", the custom publisher needs to be defined to the following value \n\n 'event_publisher_impl = \"org.wso2.carbon.apimgt.usage.publisher.APIMgtUsageDataBridgeDataPublisher\""
-                        },
-                        {
-                            "name": "publish_response_size",
-                            "type": "string",
-                            "required": false,
-                            "default": "FALSE",
-                            "possible": "",
-                            "description": "Set TRUE to enable and define size of the publisher response sent to Analytics. Size is set bytes."
-                        }
-                    ]
+                  "name": "enable",
+                  "type": "boolean",
+                  "required": true,
+                  "default": false,
+                  "possible": "TRUE | FALSE",
+                  "description": "Enable or disable Analytics in API Manager."
+                },
+                {
+                  "name": "type",
+                  "type": "string",
+                  "required": true,
+                  "default": "moesif",
+                  "possible": "moesif, log",
+                  "description": "Analytics provider type. For API-M 4.6.0+, use 'moesif' or 'log'."
                 }
-            ],
-            "exampleFile": "apim.analytics.toml"
+              ]
+            },
+            {
+              "name": "apim.analytics.properties",
+              "required": true,
+              "description": "Provider-specific properties for the selected analytics type.",
+              "params": [
+                {
+                  "name": "moesifKey",
+                  "type": "string",
+                  "required": true,
+                  "default": "",
+                  "possible": "",
+                  "description": "Moesif API key used to authenticate ingestion. (Only when type is 'moesif')"
+                },
+                {
+                  "name": "moesif_base_url",
+                  "type": "string",
+                  "required": false,
+                  "default": "https://api.moesif.com",
+                  "possible": "",
+                  "description": "Base URL of the Moesif ingestion endpoint. (Only when type is 'moesif')"
+                },
+                {
+                  "name": "send_headers",
+                  "type": "boolean",
+                  "required": false,
+                  "default": false,
+                  "possible": "TRUE | FALSE",
+                  "description": "If TRUE, include request/response headers in events sent to analytics."
+                },
+                {
+                  "name": "build_response_message",
+                  "type": "boolean",
+                  "required": false,
+                  "default": false,
+                  "possible": "TRUE | FALSE",
+                  "description": "If TRUE, response will be build and calculate the responseSize which will includes in response analytics event"
+                }
+              ]
+            }
+          ],
+          "exampleFile": "apim.analytics.toml"
         },
         {
             "title": "API-M Analytics - URL group configurations",
