--- a/en/tools/config-catalog-generator/data/apim.analytics.toml
+++ b/en/tools/config-catalog-generator/data/apim.analytics.toml
@@ -1,8 +1,9 @@
 [apim.analytics]
-enable = false
-store_api_url = "https://localhost:7444"
-username = "$ref{super_admin.username}"
-password = "$ref{super_admin.password}"
-event_publisher_type = "custom"
-event_publisher_impl = "org.wso2.carbon.apimgt.usage.publisher.APIMgtUsageDataBridgeDataPublisher"
-publish_response_size = true
+enable = true
+type = "moesif"
+
+[apim.analytics.properties]
+moesifKey = "estY2FtcGxlLW1vZXNpZi1rZXk="
+moesif_base_url = "https://api.moesif.com"
+send_headers = false
+build_response_message = false
