--- a/en/docs/reference/product-apis/publisher-apis/publisher-v4/publisher-v4.yaml
+++ b/en/docs/reference/product-apis/publisher-apis/publisher-v4/publisher-v4.yaml
@@ -68,7 +68,7 @@ info:
     of this document and scope for each resource is given in **authorization** section of resource documentation.
     Following is the format of the request if you are using the password grant type.
     ```
-    curl -k -d "grant_type=password&username=<admin_username>&password=<admin_password>&scope=<scopes seperated by space>"
+    curl -k -d "grant_type=password&username=<admin_username>&password=<admin_password>&scope=<scopes separated by space>"
     \ -H "Authorization: Basic base64(client_id:client_secret)"
     \ https://<host>:<servlet_port>/oauth2/token
     ```
@@ -279,7 +279,7 @@ paths:
         - APIs
       summary: Get Details of an API
       description: |
-        Using this operation, you can retrieve complete details of a single API. You need to provide the Id of the API to retrive it.
+        Using this operation, you can retrieve complete details of a single API. You need to provide the Id of the API to retrieve it.
       parameters:
         - $ref: '#/components/parameters/apiId'
         - $ref: '#/components/parameters/requestedTenant'
@@ -1296,7 +1296,7 @@ paths:
       description: |
         This operation can be used to retrieve details of the subscription throttling policy of an API by specifying the API Id.
 
-        `X-WSO2-Tenant` header can be used to retrive API subscription throttling policies that belongs to a different tenant domain. If not specified super tenant will be used. If Authorization header is present in the request, the user's tenant associated with the access token will be used.
+        `X-WSO2-Tenant` header can be used to retrieve API subscription throttling policies that belongs to a different tenant domain. If not specified super tenant will be used. If Authorization header is present in the request, the user's tenant associated with the access token will be used.
       parameters:
         - $ref: '#/components/parameters/apiId'
         - $ref: '#/components/parameters/requestedTenant'
@@ -3476,7 +3476,7 @@ paths:
         - API Documents
       summary: Get the Content of an API Document
       description: |
-        This operation can be used to retrive the content of an API's document.
+        This operation can be used to retrieve the content of an API's document.
 
         The document can be of 3 types. In each cases responses are different.
 
@@ -3522,7 +3522,7 @@ paths:
         303:
           description: |
             See Other.
-            Source can be retrived from the URL specified at the Location header.
+            Source can be retrieved from the URL specified at the Location header.
           headers:
             Location:
               description: |
@@ -6002,7 +6002,7 @@ paths:
         - API Products
       summary: Get Details of an API Product
       description: |
-        Using this operation, you can retrieve complete details of a single API Product. You need to provide the Id of the API to retrive it.
+        Using this operation, you can retrieve complete details of a single API Product. You need to provide the Id of the API to retrieve it.
       parameters:
         - $ref: '#/components/parameters/apiProductId'
         - $ref: '#/components/parameters/Accept'
@@ -6391,7 +6391,7 @@ paths:
         - API Product Documents
       summary: Get a List of Documents of an API Product
       description: |
-        This operation can be used to retrive a list of documents belonging to an API Product by providing the ID of the API Product.
+        This operation can be used to retrieve a list of documents belonging to an API Product by providing the ID of the API Product.
       parameters:
         - $ref: '#/components/parameters/apiProductId'
         - $ref: '#/components/parameters/limit'
@@ -6654,7 +6654,7 @@ paths:
         - API Product Documents
       summary: Get the Content of an API Product Document
       description: |
-        This operation can be used to retrive the content of an API's document.
+        This operation can be used to retrieve the content of an API's document.
 
         The document can be of 3 types. In each cases responses are different.
 
@@ -6698,7 +6698,7 @@ paths:
         303:
           description: |
             See Other.
-            Source can be retrived from the URL specified at the Location header.
+            Source can be retrieved from the URL specified at the Location header.
           headers:
             Location:
               description: |
@@ -7490,9 +7490,9 @@ paths:
     get:
       tags:
         - Settings
-      summary: Retreive Publisher Settings
+      summary: Retrieve Publisher Settings
       description: |
-        Retreive publisher settings
+        Retrieve publisher settings
       responses:
         200:
           description: |
@@ -8314,7 +8314,7 @@ paths:
         - API Operation Policies
       summary: Add an API specific operation policy
       description: |
-        This operation can be used to add an API specifc operation policy. This policy cannot be used in other APIs.
+        This operation can be used to add an API specific operation policy. This policy cannot be used in other APIs.
       operationId: addAPISpecificOperationPolicy
       parameters:
         - $ref: '#/components/parameters/apiId'
@@ -9487,7 +9487,7 @@ paths:
       summary: |
         Get Pending Workflow Details by External Workflow Reference
       description: |
-        Using this operation, you can retrieve complete details of a pending workflow request that either belongs to application creation, application subscription, application registration, api state change, user self sign up.. You need to provide the External_Workflow_Reference of the workflow Request to retrive it.
+        Using this operation, you can retrieve complete details of a pending workflow request that either belongs to application creation, application subscription, application registration, api state change, user self sign up.. You need to provide the External_Workflow_Reference of the workflow Request to retrieve it.
       parameters:
         - name: externalWorkflowRef
           in: path
