--- a/en/docs/reference/product-apis/publisher-apis/publisher-v4/publisher-v4.yaml
+++ b/en/docs/reference/product-apis/publisher-apis/publisher-v4/publisher-v4.yaml
@@ -7538,9 +7538,9 @@ paths:
     get:
       tags:
         - Settings
-      summary: Retreive Publisher Settings
+      summary: Retrieve Publisher Settings
       description: |
-        Retreive publisher settings
+        Retrieve publisher settings
       responses:
         200:
           description: |
